--- a/contato.html
+++ b/contato.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./contato.css">
     <title>Contato</title>
 </head>
 <body>
     <nav>
         <div id="logo">
-            <img src="./contatogallery/Hapvida_1000x1000_Prancheta-1.png" alt="logo">
+            <a href=""> 
+                <img src="./contatogallery/Hapvida_1000x1000_Prancheta-1.png" alt="logo">
+            </a>
         </div>
         <div id="menu">
             <a href="">Home</a>
-            <a href="">Problema & Solução</a>
-            <a href="">Demonstração da Solução</a>
-            <a href="">Contato</a>
+            <a href="./problema&solucao.html">Problema & Solução</a>
+            <a href="./solucao.html">Demonstração da Solução</a>
+            <a href="./contato.html">Contato</a>
         </div>
     </nav>
 
@@ -36,14 +38,17 @@
     <section id="table-section">
         <table>
             <tr>
+                <th>Foto</th>
                 <th>Nome</th>
                 <th>RM</th>
             </tr>
             <tr>
+                <td><img src=></td>
                 <td>Caio Hideki Cardenas Ishizu</td>
                 <td>RM553630</td>
             </tr>
             <tr>
+                <td><img src=""></td>
                 <td>Marcelo Vieira de Melo</td>
                 <td>RM552953</td>
             </tr>
@@ -51,6 +56,6 @@
         </table>
     </section>
 
-    <script src="script.js"></script>
+    <script src="contato.js"></script>
 </body>
 </html>
